[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/ui/leaderboard/setHighScore.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/leaderboard/leaderBoardAssets.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.317647, 0.317647, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.317647, 0.317647, 0.317647, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.286275, 0.286275, 0.286275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=7]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=9]
resource_name = "inst"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.435275, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 0, -250 ), Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.313726, 0.313726, 0.313726, 1 )
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=11]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 50 ), Vector2( 0, -720 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.554785, 0.535887 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("container:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("container/forMobile:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -250 ) ]
}

[node name="setHighScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="Node2D" parent="."]

[node name="panel" type="Sprite" parent="container"]
modulate = Color( 0.654902, 0.988235, 0.94902, 1 )
position = Vector2( 658.469, 358.099 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16.3157, 135.579, 844.684, 445.421 )

[node name="LineEdit" type="LineEdit" parent="container"]
visible = false
margin_left = 397.602
margin_top = 311.638
margin_right = 923.602
margin_bottom = 381.638
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
max_length = 15
placeholder_text = "Tap here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="container"]
margin_left = 313.32
margin_top = 174.695
margin_right = 1004.32
margin_bottom = 299.695
custom_fonts/font = SubResource( 4 )
text = "Congratulations !!!                                   You are in top 8"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonDone" type="Sprite" parent="container"]
modulate = Color( 0.0392157, 0.972549, 0.0745098, 1 )
position = Vector2( 662.709, 478.526 )
scale = Vector2( 0.3, 0.719 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 13, 13, 624, 119 )

[node name="Button" type="Button" parent="container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 536.0
margin_top = 444.0
margin_right = 788.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="container"]
margin_left = 541.0
margin_top = 444.0
margin_right = 783.0
margin_bottom = 513.0
custom_fonts/font = SubResource( 5 )
text = "Save"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forMobile" type="Node2D" parent="container"]
position = Vector2( 0, -250 )

[node name="Sprite" type="Sprite" parent="container/forMobile"]
modulate = Color( 0.905882, 0.866667, 0.647059, 1 )
position = Vector2( 645.94, 116.542 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 18, 16, 619, 119 )

[node name="Sprite2" type="Sprite" parent="container/forMobile"]
modulate = Color( 0.784314, 1, 0.682353, 1 )
position = Vector2( 865, 116 )
scale = Vector2( 0.207178, 0.588785 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 10, 15, 628, 121 )

[node name="LineEdit" type="LineEdit" parent="container/forMobile"]
margin_left = 376.0
margin_top = 84.0
margin_right = 774.0
margin_bottom = 142.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="container/forMobile"]
margin_left = 798.0
margin_top = 80.0
margin_right = 929.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 8 )
text = "Done"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doneBtn" type="Button" parent="container/forMobile"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 803.0
margin_top = 85.0
margin_right = 928.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="container/forMobile"]
anims/inst = SubResource( 9 )

[node name="nameEnterLabel" type="Label" parent="container"]
margin_left = 413.0
margin_top = 316.0
margin_right = 912.0
margin_bottom = 393.0
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Tap here to enter name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forMobile2" type="Button" parent="container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 381.0
margin_top = 313.0
margin_right = 915.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 12 )
anims/insert = SubResource( 13 )

[connection signal="button_down" from="container/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="container/forMobile/doneBtn" to="." method="_on_doneBtn_button_down"]
[connection signal="button_down" from="container/forMobile2" to="." method="_on_forMobile2_button_down"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
